WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64164
[WK2] Do not forward touch events to the web process when it does not need them
https://bugs.webkit.org/show_bug.cgi?id=64164
Summary
[WK2] Do not forward touch events to the web process when it does not need them
Benjamin Poulain
Reported
2011-07-08 05:54:25 PDT
WebCore already tell to the ChromeClient if touch events are needed or not through ChromeClient::needTouchEvent. This is useful for skipping the event delivery entierely for better responsivness (the event being used directly for gesture without waiting for the webprocess to send them back). We should use that in WebKit 2 as well..
Attachments
Patch
(10.05 KB, patch)
2011-07-08 06:33 PDT
,
Benjamin Poulain
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2011-07-08 06:33:10 PDT
Created
attachment 100113
[details]
Patch
Benjamin Poulain
Comment 2
2011-07-08 06:39:01 PDT
For reviewers: I could have just queued a Vector<NativeWebTouchEvent>, and the first element of the vector would implicitely be the forwardedEvent. I prefered to create a new structure instead to make the event handling more explicit. The memory space is not a big concern here given the size of the queue.
Kenneth Rohde Christiansen
Comment 3
2011-07-08 07:24:14 PDT
Comment on
attachment 100113
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=100113&action=review
> Source/WebKit2/UIProcess/WebPageProxy.h:139 > + :forwardedEvent(event)
missing space :-)
Benjamin Poulain
Comment 4
2011-07-08 07:43:36 PDT
Committed
r90629
: <
http://trac.webkit.org/changeset/90629
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug