[WK2] Do not forward touch events to the web process when it does not need them https://bugs.webkit.org/show_bug.cgi?id=64164

Reviewed by Kenneth Rohde Christiansen.

Source/JavaScriptCore:

Add a convenience function to obtain a reference to the last element of a Deque.

* wtf/Deque.h:
(WTF::Deque::last):

Source/WebKit2:

The call to ChromeClient::needTouchEvent() is now forwarded to the WebPageProxy
to change the way events are delivered.

When the WebPage does not need touch events, and there is no queued touch events,
the incoming events just bounce back through PageClient::doneWithTouchEvent().

In the case when new events come to WebPageProxy and there are still touch events
incoming from the WebProcess, the new events are deferred with the corresponding
pending touch events.
Deferring the new events iafter the corresponding forwarded event ensure
the delivery is always done in order when PageClient::doneWithTouchEvent()
is called.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::WebPageProxy):
(WebKit::WebPageProxy::handleTouchEvent):
(WebKit::WebPageProxy::needTouchEvents):
(WebKit::WebPageProxy::didReceiveEvent):
(WebKit::WebPageProxy::processDidCrash):
* UIProcess/WebPageProxy.h:
(WebKit::QueuedTouchEvents:::forwardedEvent):
* UIProcess/WebPageProxy.messages.in:
* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::needTouchEvents):

Canonical link: https://commits.webkit.org/79894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90629 268f45cc-cd09-0410-ab3c-d52691b4dbfc