Source/JavaScriptCore/wtf/Deque.h
@@ -78,6 +78,9 @@ namespace WTF {
         const T& first() const { ASSERT(m_start != m_end); return m_buffer.buffer()[m_start]; }
         PassType takeFirst();
 
+        T& last() { ASSERT(m_start != m_end); return *(--end()); }
+        const T& last() const { ASSERT(m_start != m_end); return *(--end()); }
+
         template<typename U> void append(const U&);
         template<typename U> void prepend(const U&);
         void removeFirst();
